--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: kejnn 
+  github: NickRoss 
   instagram:
-  linkedin: https://www.linkedin.com/in/drdata/
+  linkedin: drdata
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: 
