--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Nick Ross
 description: Professor of Data Science 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: /images/grumpy.png 
 
 #
 # Flags below are optional
@@ -31,6 +31,9 @@ footer-links:
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
 
+collections:
+  projects:
+    output: true
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
