--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Nick Ross
 description: Professor of Data Science 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: /images/resize_grump.png 
+avatar: /images/grumpy_resize.png 
 
 #
 # Flags below are optional
