--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,11 @@ footer-links:
 collections:
   projects:
     output: true
+  classes:
+    output: true
+  career:
+    output: true
+
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
