--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,8 @@ collections:
     output: true
   career:
     output: true
-
+  talks: 
+    output: true
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
