--- a/_config.yml
+++ b/_config.yml
@@ -40,6 +40,10 @@ collections:
     output: true
   talks: 
     output: true
+  research:
+    output: true
+
+
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
